--- a/my-website/src/css/custom.css
+++ b/my-website/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --ifm-color-primary: #2b2d73;
+    --ifm-color-primary-dark: #272868;
+    --ifm-color-primary-darker: #252662;
+    --ifm-color-primary-darkest: #1e1f51;
+    --ifm-color-primary-light: #2f317e;
+    --ifm-color-primary-lighter: #313484;
+    --ifm-color-primary-lightest: #383a95;
+    --ifm-code-font-size: 95%;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --ifm-color-primary: #66a5cc;
+    --ifm-color-primary-dark: #4f97c4;
+    --ifm-color-primary-darker: #4491c1;
+    --ifm-color-primary-darkest: #3678a1;
+    --ifm-color-primary-light: #7db2d4;
+    --ifm-color-primary-lighter: #88b9d7;
+    --ifm-color-primary-lightest: #abcde3;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
